--- a/questions/templates/questions/home.html
+++ b/questions/templates/questions/home.html
@@ -20,6 +20,9 @@
 
     <!-- Remarkable Markdown Rendering -->
     <script src="https://npmcdn.com/remarkable@1.6.2/dist/remarkable.min.js"></script>
+
+    <!-- Page styling -->
+    <link href="{% static 'questions/home/style.css' %}" rel="stylesheet">
   </head>
   <body>
     <div class="container" id="content"></div>
