--- a/questions/templates/questions/home.html
+++ b/questions/templates/questions/home.html
@@ -27,5 +27,6 @@
   <body>
     <div class="container" id="content"></div>
     <script src="{% static 'questions/home/app.js' %}" type="text/babel"></script>
+    <noscript>Want to use this website? Turn on JavaScript!</noscript>
   </body>
 </html>
