added magnifying glass favicon

--- a/questions/templates/questions/home.html
+++ b/questions/templates/questions/home.html
@@ -23,6 +23,8 @@
 
     <!-- Page styling -->
     <link href="{% static 'questions/home/style.css' %}" rel="stylesheet">
+    <link rel="icon" href="{%  static 'questions/favicon/favicon.ico' %}">
+
   </head>
   <body>
     <div class="container" id="content"></div>
