Add magnifying glass favicon

--- a/questions/templates/questions/home.html
+++ b/questions/templates/questions/home.html
@@ -23,6 +23,7 @@
 
     <!-- Page styling -->
     <link href="{% static 'questions/home/style.css' %}" rel="stylesheet">
+    <link href="{% static 'questions/favicon/favicon.ico' %}" rel="icon">
   </head>
   <body>
     <div class="container" id="content"></div>
